Fix: #1692 - Hourglass and Pedigree chart horizontal scroll

--- a/themes/_common/css-2.0.0/style.css
+++ b/themes/_common/css-2.0.0/style.css
@@ -393,7 +393,6 @@
 
 .wt-pedigree-chart, .wt-hourglass-chart {
     overflow-x: visible;
-    overflow-y: visible;
 }
 
 .wt-pedigree-chart .spacer {
